kubernetes/apps/ai/t3-code-operator/instance/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: t3-code
spec:
  hostnames:
    - t3.janpuc.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: t3-code
          port: 3773
      timeouts:
        request: 0s
        backendRequest: 0s
